--- a/fylo.html
+++ b/fylo.html
@@ -15,7 +15,7 @@
 <body>
     <div class="main-container">
         <header>
-            <img src="images/logo.svg" alt="fylo_logo" class="header-logo" />
+            <img src="logo.svg" alt="fylo_logo" class="header-logo" />
 
             <nav>
                 <ul class="nav-links">
@@ -28,7 +28,7 @@
 
         <hero>
             <div class="hero-container">
-                <img src="images/illustration-intro.png" alt="intro_illustration" class="intro-img"  />
+                <img src="illustration-intro.png" alt="intro_illustration" class="intro-img"  />
             </div>
 
             <div class="intro-text-container">
@@ -43,21 +43,21 @@
 
         <div class="products-desc"> 
             <div class="product-desc">
-                <img src="images/icon-access-anywhere.svg" alt="access_files_anywhere" class="product-desc-img"  />
+                <img src="icon-access-anywhere.svg" alt="access_files_anywhere" class="product-desc-img"  />
                 <h2 class="product-desc-text">Access your files, anywhere</h2>
                 <p class="product-desc-subtext"> The ability to use a smartphone, tablet, or computer to access your account means your 
                     files follow you everywhere.</p>
             </div>
 
             <div class="product-desc">
-                <img src="images/icon-security.svg" alt="secure_files" class="product-desc-img"  />
+                <img src="icon-security.svg" alt="secure_files" class="product-desc-img"  />
                 <h2 class="product-desc-text">Security you can trust</h2>
                 <p class="product-desc-subtext">2-factor authentication and user-controlled encryption are just a couple of the security 
                     features we allow to help secure your files.</p>
             </div>
             
             <div class="product-desc">
-                <img src="images/icon-collaboration.svg" alt="Colloborate_anywhere" class="product-desc-img"  />
+                <img src="icon-collaboration.svg" alt="Colloborate_anywhere" class="product-desc-img"  />
                 <h2 class="product-desc-text"> Real-time collaboration</h2>
                 <p class="product-desc-subtext">
                     Securely share files and folders with friends, family and colleagues for live collaboration. 
@@ -65,7 +65,7 @@
             </div>
 
             <div class="product-desc">
-                <img src="images/icon-any-file.svg" alt="Store_anyfile" class="product-desc-img"  />
+                <img src="icon-any-file.svg" alt="Store_anyfile" class="product-desc-img"  />
                 <h2 class="product-desc-text">Store any type of file</h2>
                 <p class="product-desc-subtext"> Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all 
                     file types to be securely stored and shared.</p>
@@ -74,7 +74,7 @@
 
         <div class="additional-product-desc">
             <div class="additional-product-desc-img-comtainer">
-                <img src="images/illustration-stay-productive.png" alt="stay_productive" class="additional-product-desc-img" />
+                <img src="illustration-stay-productive.png" alt="stay_productive" class="additional-product-desc-img" />
             </div>
             <div class="additional-product-desc-texts">
                 <h1 class="additional-product-desc-text">Stay productive, wherever you are</h1>
@@ -95,20 +95,20 @@
             <div class="testimonials">
                 <p class="testimonial-text">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
                     become a well-oiled collaboration machine.</p>
-                    <img src="images/profile-1.jpg" alt="client_image" class="testimonial-img" />
+                    <img src="profile-1.jpg" alt="client_image" class="testimonial-img" />
                     <span class="client-name"> Satish Patel <br/><span class="client-role">Founder & CEO, Huddle</span></span>
             </div>
 
             <div class="testimonials"> 
                 <p class="testimonial-text">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
                 become a well-oiled collaboration machine.</p>
-                <img src="images/profile-2.jpg" alt="client_image" class="testimonial-img" />
+                <img src="profile-2.jpg" alt="client_image" class="testimonial-img" />
                 <span class="client-name">Bruce McKenzie <br/><span class="client-role">Founder & CEO, Huddle</span></span></div>
 
             <div class="testimonials"> 
                 <p class="testimonial-text">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
                 become a well-oiled collaboration machine.</p>
-                <img src="images/profile-3.jpg" alt="client_image" class="testimonial-img" />
+                <img src="profile-3.jpg" alt="client_image" class="testimonial-img" />
                 <span class="client-name">Iva Boyd <br/><span class="client-role">Founder & CEO, Huddle</span></span></div> 
 
         </div>
@@ -127,7 +127,7 @@
 
         <footer>
             <div class="footer-container">
-                <img src="images/logo.svg" alt="fylo_logo" class="footer-logo" />
+                <img src="logo.svg" alt="fylo_logo" class="footer-logo" />
                 <div class="fylo-info-container">
                     <div class="fylo-info-1">
                         <ul class="fylo-info-list">
